--- a/.env
+++ b/.env
@@ -1,6 +1,3 @@
-DB_HOST='localhost'
-DB_PORT=5555
-DB_USERNAME='postgres'
-DB_PASSWORD='12091309'
-DB_NAME='tictactoe'
-SECRET='rakamakafo123'
+MONGO_URI="mongodb+srv://roman:12091309@roman.lp4bkvo.mongodb.net/TicTacToe"
+SECRET="rolokivec"
+SALT=10
